--- a/views/head.ejs
+++ b/views/head.ejs
@@ -7,7 +7,7 @@
 <meta name="apple-mobile-web-app-title" content="122 Queue">
 
 <link rel="manifest" href="/manifest.json">
-<link rel="apple-touch-icon" href="/img/cmuq_small.png">
+<link rel="apple-touch-icon" href="/img/purple_cow.png">
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"/>
 <link rel="stylesheet" href="/css/styles.css"/>
