--- a/views/home.ejs
+++ b/views/home.ejs
@@ -23,7 +23,7 @@
     </div>
     <br>
     <button type='button' class='btn-flat' onclick="cancelEditMessage(); return false;">Cancel</button>
-    <button type='submit' class='btn waves-effect waves-light cyan'>Submit</button>
+    <button type='submit' class='btn waves-effect waves-light purple darken-3'>Submit</button>
   </form>
   <%_ } _%>
 
@@ -78,7 +78,7 @@
       <label for="question">Question</label>
   </div>
   <div class="input-field inline col l2 m2 s12 center-btn">
-    <button class="waves-effect waves-light btn cyan" name="action" value="ADD">Enter</button>
+    <button class="waves-effect waves-light btn purple darken-3" name="action" value="ADD">Enter</button>
   </div>
   </form>
   </div>
@@ -91,7 +91,7 @@
   <div class="modal-content center-align">
     <h4>It's your turn to get help!</h4>
     <p><span id="modal_ta_name"></span> is ready to help you.</p>
-    <a id="modal_ta_video_chat_url" href="javascript:;" target="_blank"><button class="waves-effect waves-light btn cyan">Join Video Chat</button></a>
+    <a id="modal_ta_video_chat_url" href="javascript:;" target="_blank"><button class="waves-effect waves-light btn purple darken-3">Join Video Chat</button></a>
   </div>
   <div class="modal-footer">
     <a href="javascript:;" class="modal-close waves-effect light-blue-text text-darken-1 btn-flat">Done</a>
@@ -131,7 +131,7 @@
             <label for="question">Question (max 255 characters)</label>
           </div>
         </div>
-      <button class='waves-effect waves-light btn cyan' name='action' value='UPDATE-QUESTION'>Update Question</button>
+      <button class='waves-effect waves-light btn purple darken-3' name='action' value='UPDATE-QUESTION'>Update Question</button>
     </form>
   </div>
   <div class="modal-footer">
