--- a/views/settings.ejs
+++ b/views/settings.ejs
@@ -21,7 +21,7 @@
             <label for="video_chat_url">Video Chat URL to show students when you begin helping them</label>
         </div>
         <div class="input-field inline col m2 s12 center-btn">
-            <button type="submit" class='btn waves-effect waves-light cyan' name="action" value="UPDATEURL">Save</button>
+            <button type="submit" class='btn waves-effect waves-light purple darken-3' name="action" value="UPDATEURL">Save</button>
         </div>
     </form>
     <p>Students will be directed to this URL when you click "Help" next to their entry.</p>
@@ -53,7 +53,7 @@
             <input type="text" name="current_semester" id="current_semester" value="<%= current_semester %>" placeholder="e.g. F17" required><label for="current_semester">Current Semester</label>
             </div>
             <div class="input-field inline col m2 s6 center-btn">
-            <button type="submit" class='btn waves-effect waves-light cyan'>Change</button>
+            <button type="submit" class='btn waves-effect waves-light purple darken-3'>Change</button>
             </div>
         </form>
         <p>If you have a Slack team set up for your course, you can set up a Slack Incoming Webhook <a href="https://my.slack.com/services/new/incoming-webhook/" target="_blank">here</a>. Otherwise, you may leave this field empty.</p>
@@ -62,7 +62,7 @@
             <input type="url" name="slack_webhook" id="slack_webhook" value="<%= slack_webhook %>"><label for="slack_webhook">Slack Webhook URL</label>
             </div>
             <div class="input-field inline col m2 s12 center-btn">
-            <button type="submit" class='btn waves-effect waves-light cyan'>Change</button>
+            <button type="submit" class='btn waves-effect waves-light purple darken-3'>Change</button>
             </div>
         </form>
         <p>This link will be displayed to students when asked to fix their question. If not needed, you may leave this field empty.</p>
@@ -71,7 +71,7 @@
             <input type="url" name="ask_question_guide_link" id="ask_question_guide_link" value="<%= ask_question_guide_link %>"><label for="ask_question_guide_link"><em>Asking Questions</em> Guide URL</label>
             </div>
             <div class="input-field inline col m2 s12 center-btn">
-            <button type="submit" class='btn waves-effect waves-light cyan'>Change</button>
+            <button type="submit" class='btn waves-effect waves-light purple darken-3'>Change</button>
             </div>
         </form>
         <div class="row">
@@ -81,7 +81,7 @@
                     <input type="number" name="cooldown_time" id="cooldown_time" value="<%= cooldown_time %>" min=0 required><label for="current_semester"></label>
                 </div>
                 <div class="input-field inline">
-                    <button type="submit" class='btn waves-effect waves-light cyan'>Change</button>
+                    <button type="submit" class='btn waves-effect waves-light purple darken-3'>Change</button>
                 </div>
             </form>
             <form action="/options" method="POST" class="row" style="margin-bottom: 0px;">
@@ -90,7 +90,7 @@
                     <input type="number" name="notif_time_threshold" id="notif_time_threshold" value="<%= notif_time_threshold %>" min=0 required><label for="current_semester"></label>
                 </div>
                 <div class="input-field inline">
-                    <button type="submit" class='btn waves-effect waves-light cyan'>Change</button>
+                    <button type="submit" class='btn waves-effect waves-light purple darken-3'>Change</button>
                 </div>
             </form>
             <form action="/options" method="POST" class="row" style="margin-bottom: 0px;">
@@ -99,7 +99,7 @@
                     <input type="number" name="notif_time_interval" id="notif_time_interval" value="<%= notif_time_interval %>" min=0 required><label for="current_semester"></label>
                 </div>
                 <div class="input-field inline">
-                    <button type="submit" class='btn waves-effect waves-light cyan'>Change</button>
+                    <button type="submit" class='btn waves-effect waves-light purple darken-3'>Change</button>
                 </div>
             </form>
         </div>
@@ -123,7 +123,7 @@
         <div class="fake-td"><input type="text" name="due_date" class="datepicker" value="<%= topic.due_date %>" required></div>
         <div class="fake-td" style="width: 1%; white-space:nowrap;">
             <input type="hidden" name="id" value="<%= topic.id %>">
-            <button class="btn-flat waves-effect cyan white-text" name="action" value="UPDATETOPIC">Update</button>
+            <button class="btn-flat waves-effect purple darken-3 white-text" name="action" value="UPDATETOPIC">Update</button>
             <button class="btn-flat waves-effect grey lighten-2 grey-text text-darken-3 remove-button" name="action" value="DELETETOPIC">Delete</button>
         </div>
         </form>
@@ -136,7 +136,7 @@
         <div class="fake-td"><label for="out_date">Out Date/Time</label><input type="text" name="out_date" class="datepicker" required></div>
         <div class="fake-td"><label for="due_date">Due Date/Time</label><input type="text" name="due_date" class="datepicker" required></div>
         <div class="fake-td" style="width: 1%; white-space:nowrap;">
-            <button class="btn-flat waves-effect cyan white-text" name="action" value="ADDTOPIC">Add</button>
+            <button class="btn-flat waves-effect purple darken-3 white-text" name="action" value="ADDTOPIC">Add</button>
         </div>
         </form>
         </div></div>
@@ -164,7 +164,7 @@
         </div>
         <div class="fake-td" style="width: 1%; white-space:nowrap;">
             <input type="hidden" name="id" value="<%= ta.id %>">
-            <button class="btn-flat waves-effect cyan white-text" name="action" value="UPDATETA">Update</button>
+            <button class="btn-flat waves-effect purple darken-3 white-text" name="action" value="UPDATETA">Update</button>
             <% if (!ta.is_self) { %>
             <button class="btn-flat waves-effect grey lighten-2 grey-text text-darken-3 remove-button" name="action" value="DELETETA">Delete</button>
             <% } %>
@@ -182,7 +182,7 @@
             <label for="admin_new"></label>
         </div>
         <div class="fake-td" style="width: 1%; white-space:nowrap;">
-            <button class="btn-flat waves-effect cyan white-text" name="action" value="ADDTA">Add</button>
+            <button class="btn-flat waves-effect purple darken-3 white-text" name="action" value="ADDTA">Add</button>
         </div>
         </form>
         </div></div>
