--- a/views/header.ejs
+++ b/views/header.ejs
@@ -15,7 +15,7 @@
     </ul>
     <ul class="right hide-on-med-and-down">
       <% if (session && session.authenticated) { %>
-      <li><span class="blue-text text-lighten-4">Logged in as <%=session.user_id %></span>
+      <li><span class="deep-purple-text text-lighten-4">Logged in as <%=session.user_id %></span>
       <% if (session.TA || session.owner) { %>
       <a class="waves-effect" href="/settings">Settings</a>
       <a class="waves-effect" href="/metrics">Metrics</a>
