--- a/views/home.ejs
+++ b/views/home.ejs
@@ -13,7 +13,7 @@
   <%_ if (message && session && (session.TA || session.owner)) { _%>
     <a href="#" onclick="editMessage(); return false;" style="vertical-align: -0.25em;"><i class="material-icons">mode_edit</i></a>
   <%_ } else if (!message && session && (session.TA || session.owner)) { _%>
-  <button class='btn-flat deep-purple-text text-darken-1' onclick="editMessage(); return false;">Add a message</button>
+  <button class='btn-flat purple-text text-darken-3' onclick="editMessage(); return false;">Add a message</button>
   <%_ } _%>
   </div>
   <%_ if (session && (session.TA || session.owner)) { _%>
@@ -94,7 +94,7 @@
     <a id="modal_ta_video_chat_url" href="javascript:;" target="_blank"><button class="waves-effect waves-light btn purple darken-3">Join Video Chat</button></a>
   </div>
   <div class="modal-footer">
-    <a href="javascript:;" class="modal-close waves-effect deep-purple-text text-darken-1 btn-flat">Done</a>
+    <a href="javascript:;" class="modal-close waves-effect purple-text text-darken-3 btn-flat">Done</a>
   </div>
 </div>
 
@@ -105,7 +105,7 @@
     <p id="cooldown_override_text">If you have specific circumstances that require you to re-enter the queue immediately, please ask a TA to manually add you.</p>
   </div>
   <div class="modal-footer">
-    <a href="javascript:;" class="modal-close waves-effect deep-purple-text text-darken-1 btn-flat">Close</a>
+    <a href="javascript:;" class="modal-close waves-effect purple-text text-darken-3 btn-flat">Close</a>
   </div>
 </div>
 
@@ -135,7 +135,7 @@
     </form>
   </div>
   <div class="modal-footer">
-    <a href="javascript:;" class="modal-close waves-effect deep-purple-text text-darken-1 btn-flat">Close</a>
+    <a href="javascript:;" class="modal-close waves-effect purple-text text-darken-3 btn-flat">Close</a>
   </div>
 </div>
 
