--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -276,8 +276,8 @@ input.flatpickr-input[type=text] {
 }
 
 input.flatpickr-input[type=text]:focus {
-    border-bottom: 1px solid #26a69a;
-    box-shadow: 0 1px 0 0 #26a69a;
+    border-bottom: 1px solid #602794;
+    box-shadow: 0 1px 0 0 #602794;
 }
 
 .fake-td button.btn-flat {
