--- a/static/css/210-override.css
+++ b/static/css/210-override.css
@@ -54,6 +54,6 @@ textarea.materialize-textarea:focus:not([readonly])+label {
 .flatpickr-day.selected.nextMonthDay,
 .flatpickr-day.startRange.nextMonthDay,
 .flatpickr-day.endRange.nextMonthDay {
-    background: #5f4b8b;
-    border-color: #5f4b8b;
+    background: #5f4b8b !important;
+    border-color: #5f4b8b !important;
 }
