--- a/views/home.ejs
+++ b/views/home.ejs
@@ -11,7 +11,7 @@
   <%_ } _%>
   </span>
   <%_ if (message && session && (session.TA || session.owner)) { _%>
-    <a href="#" onclick="editMessage(); return false;" style="vertical-align: -0.25em;"><i class="material-icons">mode_edit</i></a>
+    <a href="#" onclick="editMessage(); return false;" style="vertical-align: -0.25em;"><i class="material-icons" id="pencil">mode_edit</i></a>
   <%_ } else if (!message && session && (session.TA || session.owner)) { _%>
   <button class='btn-flat purple-text text-darken-3' onclick="editMessage(); return false;">Add a message</button>
   <%_ } _%>
